Added http parameter for the input expression + copy url button

--- a/index.html
+++ b/index.html
@@ -36,13 +36,17 @@
                     <h2>Output</h2>
                     <div class="result__zone">
                         <p class="result__paragraph">Results will be displayed here.</p>
-                        <a
-                            class="result__issue"
-                            href="https://github.com/martinheywang/literal-calculator-web/issues/new"
-                            rel="noopener noreferrer"
-                            target="blank"
-                            >seems wrong?</a
-                        >
+                        <div class="result__links">
+                            <a
+                                class="result__issue"
+                                href="https://github.com/martinheywang/literal-calculator-web/issues/new"
+                                rel="noopener noreferrer"
+                                target="blank"
+                                >seems wrong?</a
+                            >
+                            |
+                            <a class="result__copy">copy url</a>
+                        </div>
                     </div>
                 </div>
             </div>
