--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
 
-
         
 
         
 
         <title>Literal Calculation</title>
-      <script type="module" crossorigin src="/literal-calculator-web/assets/index.a7515dbf.js"></script>
-      <link rel="stylesheet" href="/literal-calculator-web/assets/index.d5f6509d.css">
+      <script type="module" crossorigin src="/literal-calculator-web/assets/index.a9af1563.js"></script>
+      <link rel="stylesheet" href="/literal-calculator-web/assets/index.f1c59f39.css">
     </head>
     <body>
         <div class="container">
@@ -30,13 +29,26 @@
                 <div class="input">
                     <h2>Input</h2>
                     <p>Enter a literal expression that will be reduced:</p>
-                    <p class="function__def"><span id="function-def" class="function__def-editable" contenteditable>2x</span></p>
+                    <p class="function__def">
+                        <span id="function-def" class="function__def-editable" contenteditable>2x</span>
+                    </p>
                     <button id="compute" class="compute">Reduce!</button>
                 </div>
                 <div class="result">
                     <h2>Output</h2>
                     <div class="result__zone">
                         <p class="result__paragraph">Results will be displayed here.</p>
+                        <div class="result__links">
+                            <a
+                                class="result__issue"
+                                href="https://github.com/martinheywang/literal-calculator-web/issues/new"
+                                rel="noopener noreferrer"
+                                target="blank"
+                                >seems wrong?</a
+                            >
+                            |
+                            <a class="result__copy">copy url</a>
+                        </div>
                     </div>
                 </div>
             </div>
