Edited result links

--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
                                 target="blank"
                                 >seems wrong?</a
                             >
-                            |
+                            
                             <a class="result__copy">copy url</a>
+                            
+                            <a class="result__copy-answer">copy result</a>
                         </div>
                     </div>
                 </div>
